# RaylibCmakeCPMTemplate

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
src/: circle.hpp  control_point.hpp  line.hpp  rectangle.hpp  ser.hpp
